--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+.Main-container{
+  width:300px;
+  position: absolute;
+  top:50%;
+  left : 50%;
+  transform: translate(-50% , -50%);
+  background-color:white; 
+  border-radius: 15px;
+  box-shadow: 0 15px 20px  rgb(150, 148, 148);
+  padding-bottom: 12px;
+  
+  
+}
+
+.Main-container .Inner  {
+  font-size: 35px;
+  font-weight: 600;
   text-align: center;
+  line-height: 100px;
+  color: #fff;
+  user-select: none;
+  border-radius: 15px 15px 0 0;
+  background: rgb(5, 5, 187);
+  padding-top: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Field{ 
+  border:none;
+  border-bottom:1px solid black;
+  width: 75%;    
+}
+form
+{
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form , .Field{
+  background-color: white;
+  padding: 15px 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Btn{
+  margin-top: 20px;
+  background-color: blue;
+  opacity: 0.5;
   color: white;
+  width: 100%;
+  padding: 2px 0px;
+  box-shadow: 0 15px 10px  rgb(150, 148, 148);
 }
-
-.App-link {
-  color: #61dafb;
+.Btn:hover{
+  opacity: 1;
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Btn:active{
+  position: relative;
+  top: 2px;
+  box-shadow: none;
+}
+.Label{
+  font-weight: bold;
+  padding-top: 1%;
 }
